--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               id="switchThemeInput"
             />
             <label class="form-check-label" for="switchThemeInput" id="switchThemeLabel"
-              >Change to light theme</label
+              >Turn ON the lights</label
             >
           </div>
         </div>
@@ -74,7 +74,7 @@
                       placeholder="New Todo list title"
                       required
                     />
-                    <button type="submit" class="btn btn-primary col-auto">
+                    <button type="submit" class="btn btn-primary col-auto" data-bs-dismiss="modal">
                       Add new Todo list
                     </button>
                   </label>
