fixed bugs in displaying/hiding todo lists and in Add new todo list form

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
                 <form name="addTodoArticle-form" class="hidden">
                   <label class="row g-2">
                     <input
+                      id="addTodoArticle-input"
                       type="text"
                       name="addTodoArticle-input"
                       class="form-control col-auto"
@@ -79,9 +80,10 @@
                     />
                   </label>
                   <button
+                    id="addTodoArticle-button"
                     type="submit"
-                    class="btn btn-primary col-auto"
-                    data-bs-dismiss="modal"
+                    class="btn btn-primary col-auto mt-3"
+                    
                   >
                     Add new Todo list
                   </button>
